--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-      
+      <script src="main.js"></script>
 </body>
 </html>
